# university-courses

./: README.md
algorithms and data structures/: CMakeLists.txt  Two kingdoms.cpp  binary_tree.cpp  bisoprtazj.cpp  burrows_wheeler.cpp  diff_substr.cpp  directors.cpp  ducha.cpp  fixed_set.h  fuzzy_matches.cpp  k_stat.cpp  magic.cpp  main.cpp  max_substr.cpp  nenoku.cpp  period_max.cpp  prefix_fun.cpp  rectangles.cpp  reduction.cpp  search_tree_count.cpp  shifr.cpp  triang.cpp
c++ programming/: CMakeLists.txt
c++ programming/any/: .tester.json  any.h  readme.md  test.cpp
c++ programming/bin-pow/: .tester.json  CMakeLists.txt  binpow.h  binpow_test.cpp  readme.md
c++ programming/bot/: .tester.json  CMakeLists.txt  README.md
c++ programming/bot/telegram/: bot.cpp  bot.h  client.cpp  client.h  fake.cpp  fake.h  main.cpp
c++ programming/bot/test/: test_api.cpp
c++ programming/calculator/: .tester.json  CMakeLists.txt  calculator.h  eval.h  readme.md  test.cpp
c++ programming/cow-vector/: .tester.json  CMakeLists.txt  README.md  cow_vector.h
c++ programming/dedup/: .tester.json  README.md  dedup.h
c++ programming/deque/: .tester.json  deque.h  readme.md  test.cpp
c++ programming/diff-pairs/: .tester.json  CMakeLists.txt  diff_pairs.h  diff_pairs_test.cpp  readme.md
c++ programming/dungeon/: .tester.json  rogue.h
c++ programming/editor/: editor.h
c++ programming/entrance/: .tester.json  CMakeLists.txt  entrance.h  readme.md  test.cpp
c++ programming/factorization/: .tester.json  CMakeLists.txt  factorization.h  readme.md  test.cpp
c++ programming/filter-even/: .tester.json  CMakeLists.txt  filter_even.h  readme.md  test.cpp
c++ programming/find-last/: .tester.json  CMakeLists.txt  find_last.h  readme.md  test.cpp
c++ programming/fold/: .tester.json  fold.h
c++ programming/functors/: CMakeLists.txt  functors.h  readme.md  test.cpp
c++ programming/intrusive-list/: .tester.json  intrusive_list.h  readme.md
c++ programming/itertools/: .tester.json  itertools.h  readme.md  test.cpp
c++ programming/list/: list.h
c++ programming/local-max/: .tester.json  CMakeLists.txt  local_max.h  readme.md  test.cpp
c++ programming/long-sum/: .tester.json  CMakeLists.txt  long_sum.h  long_sum_test.cpp  readme.md
c++ programming/lru-cache/: .tester.json  lru_cache.h  readme.md
c++ programming/matrix/: .tester.json  CMakeLists.txt  matrix.h  readme.md  test.cpp
c++ programming/multiplication/: .tester.json  CMakeLists.txt  multiplication.h  readme.md
c++ programming/partition/: .tester.json  CMakeLists.txt  partition.h  readme.md  test.cpp
c++ programming/permutations/: .tester.json  CMakeLists.txt  permutations.h  permutations_test.cpp  readme.md
c++ programming/pimpl/: CMakeLists.txt  ugly.cpp  ugly.h
c++ programming/polish-notation/: .tester.json  CMakeLists.txt  polish_notation.h  polish_notation_test.cpp  readme.md
c++ programming/pt-triangle/: .tester.json  CMakeLists.txt  point_triangle.h  readme.md  test.cpp
c++ programming/quadratic/: .tester.json  CMakeLists.txt  quadratic.h  readme.md  test.cpp
c++ programming/range/: .tester.json  CMakeLists.txt  range.h  range_test.cpp  readme.md
c++ programming/raytracer/: .tester.json  CMakeLists.txt  camera_options.h  commons.hpp  raytracer.h  readme.md  test.cpp
c++ programming/reader/: .tester.json  CMakeLists.txt  reader.h  readers_util.h  readme.md  test.cpp
c++ programming/reverse-map/: .tester.json  CMakeLists.txt  readme.md  reverse_map.h  reverse_map_test.cpp
c++ programming/ring-buffer/: .tester.json  CMakeLists.txt  readme.md  ring_buffer.h  test.cpp
c++ programming/rotate/: .tester.json  CMakeLists.txt  readme.md  rotate.h  test.cpp
c++ programming/scheme/: .tester.json  CMakeLists.txt  object.cpp  object.h  parser.cpp  parser.h  readme.md  scheme.cpp  scheme.h  tokenizer.h
c++ programming/scheme-parser/: .tester.json  CMakeLists.txt  README.md  parser_test.cpp
c++ programming/scheme-tokenizer/: .tester.json  CMakeLists.txt  README.md  tokenizer_test.cpp
c++ programming/scheme/test/: scheme_test.cpp  scheme_test.h  test_boolean.cpp  test_control_flow.cpp  test_eval.cpp  test_integer.cpp  test_lambda.cpp  test_list.cpp  test_symbol.cpp
c++ programming/small-test-framework/: test.h
c++ programming/smart-ptr/: .tester.json  CMakeLists.txt  readme.md  smart_ptr.h  test.cpp
c++ programming/sort-students/: .tester.json  CMakeLists.txt  readme.md  sort_students.h  test.cpp
c++ programming/split/: .tester.json  CMakeLists.txt  readme.md  split.h  split_test.cpp
c++ programming/stack/: .tester.json  CMakeLists.txt  readme.md  stack.h  test.cpp
c++ programming/static-map/: .tester.json  CMakeLists.txt  readme.md  static_map.h  test.cpp
c++ programming/string-view/: .tester.json  string_view.h  test.cpp
c++ programming/swap-sort/: .tester.json  CMakeLists.txt  readme.md  swap_sort.h  test.cpp
c++ programming/tryhard/: test.cpp  try.h
c++ programming/unique/: .tester.json  CMakeLists.txt  readme.md  unique.h  unique_test.cpp
c++ programming/vector/: .tester.json  CMakeLists.txt  readme.md  test.cpp  vector.h
c++ programming/war/: .tester.json  CMakeLists.txt  readme.md  test.cpp  war.h
c++ programming/word-count/: .tester.json  CMakeLists.txt  readme.md  word_count.h  word_count_test.cpp
parallel numerical methods/: Crank-Nicholson.cpp  README.md  biconjugate gradients.cpp  lu_decomposition.cpp
reinforcement learning/home1/: 3_qlearning_sarsa.ipynb  mdp.py
reinforcement learning/home1/.ipynb_checkpoints/: 1_crossentropy_method-checkpoint.ipynb  2_mdp-checkpoint.ipynb  3_qlearning_sarsa-checkpoint.ipynb
reinforcement learning/hw3/: 1_reinforce.ipynb  2_pomdp.ipynb  3_mcts.ipynb
reinforcement learning/hw3/kungfu_videos/: openaigym.episode_batch.3.10291.stats.json  (+4 more)
reinforcement learning/ml_hw2/: 1_seminar.ipynb  3_main.ipynb
scientific programming in python/: CpG_filter.py  comparator_to_key.py  graph_parttition.py  interpolation_kepler.ipynb  last_divider.py  matrix_filter.py  python_types.py  transcendental_equation.ipynb  vtk_itk.py
(+20 files in other folders)
